# pyros-setup

./: .envrc  .gitignore  .pyup.yml  .travis.yml  CHANGELOG.rst  CMakeLists.txt  MANIFEST.in  Pipfile  README.rst  dev-requirements.txt  doc-requirements.txt  example_usage.py  package.xml  pypi_release.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
cmake/: catkin-pip.cmake  catkin-venv.cmake  devellink.cmake  python-venv-install.cmake.in  python-venv.cmake
doc/: conf.py  develop.rst  index.rst
instance/: pyros_setup.cfg  pyros_setup_jade.cfg  pyros_setup_kinetic.cfg
pyros_setup/: __init__.py  __main__.py  _setup.py  _version.py  config.py  helpers.py  ros_genmsg_py.py  ros_importer.py  ros_setup.py  ros_utils.py  rostest_nose.py  utils.py
pyros_setup/config/: __init__.py  config.py  confighandler.py  configimport.py  helpers.py  import_string.py  packagebound.py
pyros_setup/distro/: __init__.py  ros_setup.py
pyros_setup/indigo/: __init__.py
pyros_setup/jade/: __init__.py
pyros_setup/kinetic/: __init__.py
pyros_setup/tests/: conftest.py  test_helpers.py  test_indigo.py  test_jade.py  test_kinetic.py  test_ros_setup.py  test_ros_utils.py  test_rostest_nose.py  test_rostest_nose.test  test_setup.py  testing.cfg  testing_indigo.cfg  testing_jade.cfg  testing_kinetic.cfg
rosutils/: README.md  build_devel.sh  build_install.sh  install_ros.sh  test_devel.sh  test_install.sh  travis_checks.sh
