<package>
  <name>pyros_setup</name>
  <version>0.0.1</version>
  <description>
  Toolsuite for running ROS environments directly from python code, without any specific requirements outside of usual python
  </description>

  <license>BSD</license>

  <url type="repository">https://github.com/asmodehn/pyros-setup</url>
  <url type="bugtracker">https://github.com/asmodehn/pyros-setup/issues</url>

  <author email="asmodehn@gmail.com">AlexV</author>
  <maintainer email="asmodehn@gmail.com">AlexV</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>driver_base</build_depend>
  <build_depend>roslint</build_depend>

  <build_depend>rospy</build_depend>
  <build_depend>python-six</build_depend>

  <run_depend>dynamic_reconfigure</run_depend>

  <run_depend>rospy</run_depend>

  <!-- these dependencies are only for testing -->
  <build_depend>rostest</build_depend>
  <test_depend>rosunit</test_depend>
  <test_depend>rostopic</test_depend>
  <test_depend>rosnode</test_depend>
  <test_depend>pyros_test</test_depend>

  <!-- documentation dependencies -->
  <build_depend>python-catkin-pkg</build_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>


