<package>
  <!--
   This file is mostly here to provide ros dependencies when this project is built with catkin
   A normal pip package is provided for it, but it currently does not support being built as a ROS package.
   -->
  <name>pyros_setup</name>
  <version>0.1.0</version>
  <description>
  Toolsuite for running ROS environments directly from python code, without any specific requirements outside of usual python
  </description>

  <license>BSD</license>

  <url type="repository">https://github.com/asmodehn/pyros-setup</url>
  <url type="bugtracker">https://github.com/asmodehn/pyros-setup/issues</url>

  <author email="asmodehn@gmail.com">AlexV</author>
  <maintainer email="asmodehn@gmail.com">AlexV</maintainer>

  <buildtool_depend>cmake</buildtool_depend>
  <build_depend>catkin_pure_python</build_depend>

  <build_depend>roslint</build_depend>

  <!-- These should be installed along with catkin and minimal ROS system -->
  <build_depend>rospy</build_depend>
  <build_depend>rosgraph</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>rostest</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rosgraph</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>rostest</run_depend>

  <!-- these dependencies are only for testing -->
  <test_depend>rosunit</test_depend>
  <test_depend>rosnode</test_depend>
  <test_depend>pyros_test</test_depend>

  <!-- documentation dependencies -->
  <build_depend>python-catkin-pkg</build_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>


