[tool.poetry]
name = "pyros_setup"
version = "0.2.2"
description = "ROS setup from python virtual env"
authors = ["AlexV <asmodehn@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.6"
six = "^1.10.0"
pytest = "^2.5.1"
pyros_config = "^0.2.0"

[tool.poetry.dev-dependencies]
wheel = "^0.33.1"
twine = "^1.13"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
